Update progress block bold for mobile layout

--- a/src/_includes/modules/progress-block-bold.html
+++ b/src/_includes/modules/progress-block-bold.html
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-sm-3 m-b-60">
         <!-- Static Process -->
-        <div class="text-center">
+        <div class="progress-text">
             <i class="dot-line progress-bold brd-transparent-before brd-primary-light-after">
                 <span class="dot-line-inner bg-primary-light bg-primary-before brd-primary-light"></span>
             </i>
@@ -14,7 +14,7 @@
 
     <div class="col-sm-3 m-b-60">
         <!-- Static Process -->
-        <div class="text-center">
+        <div class="progress-text">
             <i class="dot-line progress-bold brd-primary-light-before brd-primary-light-after">
                 <span class="dot-line-inner bg-primary-light bg-primary-before brd-primary-light"></span>
             </i>
@@ -26,7 +26,7 @@
 
     <div class="col-sm-3 m-b-60">
         <!-- Static Process -->
-        <div class="text-center">
+        <div class="progress-text">
             <i class="dot-line progress-bold brd-primary-light-before brd-gray-light-after">
                 <span class="dot-line-inner bg-primary-light bg-primary-before brd-primary-light"></span>
             </i>
@@ -38,7 +38,7 @@
 
     <div class="col-sm-3 m-b-60">
         <!-- Static Process -->
-        <div class="text-center">
+        <div class="progress-text">
             <i class="dot-line progress-bold brd-gray-light-before brd-transparent-after">
                 <span class="dot-line-inner bg-grey-light brd-gray-light"></span>
             </i>
