--- a/src/_includes/modules/header-primary-banner.html
+++ b/src/_includes/modules/header-primary-banner.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		<div class="row my-4">
 			<div class="col my-auto">
-				<p>Enhance your websites and applications with the latest version (V6) of the <span style="color: #ffffff">State Template!</span></p>
+				<p>Enhance your websites and applications with the latest version (V6) of the <span role="text" style="color: #ffffff">State Template!</span></p>
 				<div class="btn-row p-b">
 					<a href="/whats-new.html" class="btn btn-primary">Introducing V6</a>
 					<a class="btn btn-primary" href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/tree/6.0.8">Download V6  <span class="ca-gov-icon-download-cloud"></span></a>
