Update social meta tags

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,8 +4,32 @@
   <title>{{ title }}</title> 
   <meta charset="utf-8">
   <meta name="Author" content="State of California" />
-  <meta name="Description" content="State of California" />
+  <meta name="Description" content="Version 6 of the State Web Template is California's latest web design standard." />
   <meta name="Keywords" content="California, government" />
+
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="HandheldFriendly" content="True">
+  <meta name="MobileOptimized" content="320">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="California State Web Template">
+  <meta name="description" content="Version 6 of the State Web Template is California's latest web design standard.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://template.webstandards.ca.gov/">
+  <meta property="og:title" content="California State Web Template">
+  <meta property="og:description" content="Version 6 of the State Web Template is California's latest web design standard.">
+  <meta property="og:image" content="https://california.azureedge.net/cdt/statetemplate/global/images/social_media_preview_image.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://template.webstandards.ca.gov/">
+  <meta property="twitter:title" content="California State Web Template">
+  <meta property="twitter:description" content="Version 6 of the State Web Template is California's latest web design standard.">
+  <meta property="twitter:image" content="https://california.azureedge.net/cdt/statetemplate/global/images/social_media_preview_image.png">
+
   {% include "../head-js-css.njk" %}
 </head>
 <body class="primary">
