--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -14,20 +14,20 @@
 
   <!-- Primary Meta Tags -->
   <meta name="title" content="California State Web Template">
-  <meta name="description" content="Version 6 of the State Web Template is California's latest web design standard.">
+  <meta name="description" content="Version 6 of the State Web Template is California's latest web design standard.  Version 6 of the State Web Template is California's latest web design standard.">
 
   <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
+  <meta prefix="og: http://ogp.me/ns#" property="og:type" content="Website">
   <meta property="og:url" content="https://template.webstandards.ca.gov/">
   <meta property="og:title" content="California State Web Template">
-  <meta property="og:description" content="Version 6 of the State Web Template is California's latest web design standard.">
+  <meta property="og:description" content="Version 6 of the State Web Template is California's latest web design standard.  Version 6 of the State Web Template is California's latest web design standard.">
   <meta property="og:image" content="https://california.azureedge.net/cdt/statetemplate/global/images/social_media_preview_image.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://template.webstandards.ca.gov/">
   <meta property="twitter:title" content="California State Web Template">
-  <meta property="twitter:description" content="Version 6 of the State Web Template is California's latest web design standard.">
+  <meta property="twitter:description" content="Version 6 of the State Web Template is California's latest web design standard.  Version 6 of the State Web Template is California's latest web design standard.">
   <meta property="twitter:image" content="https://california.azureedge.net/cdt/statetemplate/global/images/social_media_preview_image.png">
 
   {% include "../head-js-css.njk" %}
