--- a/src/_includes/modules/timeline-angled.html
+++ b/src/_includes/modules/timeline-angled.html
@@ -5,7 +5,8 @@
  <div class="container mb-2">
   <div style="margin-bottom:6rem;max-width:876px;">
    <h2>The State Template is one step closer to the Design System</h2>
-   <p>The final release (V6) of the State Web Template is part of a planned move to the Design System. V6 of the State
+   <p>The final release (V6) of the State Web Template is part of a planned move to the <a
+     href="https://designsystem.webstandards.ca.gov/">Design System</a>. V6 of the State
     Template moves us one step closer to a new statewide digital standard. This timeline describes our planned
     activities and release dates.</p>
   </div>
