--- a/src/scss/cagov/site-header.scss
+++ b/src/scss/cagov/site-header.scss
@@ -75,7 +75,7 @@
 					}
 					.logo-state {
 						font-size: 1rem;
-						font-family: "Asap Condensed", sans-serif;
+						font-family: "Public Sans", sans-serif;
 						margin: 0;
 						padding: 0;
 						color: $gray-dark;
@@ -86,7 +86,7 @@
 					}
 					.logo-dept {
 						font-size: 1.54rem;
-						font-family: "Asap Condensed", sans-serif;
+						font-family: "Public Sans", sans-serif;
 						font-weight: 700;
 						margin: 0;
 						padding: 0;
