--- a/src/scss/cagov/site-header.scss
+++ b/src/scss/cagov/site-header.scss
@@ -78,7 +78,7 @@
 						font-family: "Public Sans", sans-serif;
 						margin: 0;
 						padding: 0;
-						color: $gray-dark;
+						color: $gray-900;
 						height: 20px;
 						line-height: 1.2em;
 						transition: all 0.3s;
@@ -90,7 +90,7 @@
 						font-weight: 700;
 						margin: 0;
 						padding: 0;
-						color: $gray-dark;
+						color: $color-p3;
 						height: 24px;
 						line-height: 1.2em;
 						transition: all 0.3s;
