Adding canonical header

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -16,6 +16,9 @@
   <meta name="title" content="California State Web Template">
   <meta name="description" content="Version 6 of the State Web Template is California's latest web design standard.">
 
+  <!-- Canonical link, improves SEO -->
+  <link href="https://template.webstandards.ca.gov{{ ("/"+permalink).replace("//","/") if permalink }}" rel="canonical">
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://template.webstandards.ca.gov/">
