Made tabs accessible #1201

--- a/src/scss/cagov/globals.scss
+++ b/src/scss/cagov/globals.scss
@@ -586,7 +586,7 @@ background-color: $outline-default-color !important;
  border-color: $brand-danger !important;
 }
 .brd-0 {
- border: none;
+ border: none !important;
 }
 .brd-right {
  border-right: solid 1px;
