--- a/src/_includes/modules/header-primary-banner.html
+++ b/src/_includes/modules/header-primary-banner.html
@@ -3,8 +3,8 @@
 	<div class="container">
 		<div class="row my-4">
 			<div class="col my-auto">
-				<h1 style="color:#fff;font-weight:600;">State Template V6</h1>
-				<div style="color:#fff;font-size:1.2em;line-height:1.8em;margin-bottom:2em;max-width:22em;">Use the latest version of the template to develop your websites and applications</div>
+				<h1 class="color-white font-weight-600">State Template V6</h1>
+				<div class="color-white lead m-b-lg line-height-1-6em" style="max-width:22em;">Use the latest version of the template to develop your websites and applications</div>
 				<div class="btn-row p-b">
 					<a href="/whats-new.html" class="btn btn-primary">Introducing V6</a>
 					<a class="btn btn-primary" href="https://github.com/Office-of-Digital-Services/California-State-Web-Template-Website/tree/6.1.0">Download V6  <span class="ca-gov-icon-download-cloud"></span></a>
