--- a/src/_includes/modules/form-textfield-required.html
+++ b/src/_includes/modules/form-textfield-required.html
@@ -1,5 +1,5 @@
-<label class="form-control-label" for="InputNameRequired"><span class="required-label">*</span> Full name</label>
-<input type="text" class="form-control" id="InputNameRequired" placeholder="Name">
+<label class="form-control-label" for="InputNameRequired"><span class="required-label">*</span> <span class="sr-only">Required field:</span> Full name</label>
+<input type="text" class="form-control" id="InputNameRequired" placeholder="Full name">
 <div class="invalid-feedback d-block">
  This field is required
 </div>
