--- a/src/_includes/modules/form-textarea-required.html
+++ b/src/_includes/modules/form-textarea-required.html
@@ -1,4 +1,4 @@
-<label class="form-control-label" for="exampleInputCommentRequired"><span class="required-label">*</span> Your
+<label class="form-control-label" for="exampleInputCommentRequired"><span class="required-label">*</span> <span class="sr-only">Required field:</span> Your
  message</label>
 <textarea id="exampleInputCommentRequired" class="form-control" rows="5" cols="80"></textarea>
 <div class="invalid-feedback d-block">
