--- a/src/_includes/modules/form-textfield.html
+++ b/src/_includes/modules/form-textfield.html
@@ -1,4 +1,4 @@
 <label class="form-control-label" for="InputName">Full name</label>
-<input type="text" class="form-control" id="InputName" placeholder="Name">
+<input type="text" class="form-control" id="InputName" placeholder="Full name">
 <div class="feedback text-muted">
 </div>
