Updated tabs page #1201

--- a/src/_includes/modules/side-navigation-level1.html
+++ b/src/_includes/modules/side-navigation-level1.html
@@ -1,5 +1,5 @@
-<nav aria-label="list navigation">
- <ul class="list-navigation">
+<nav aria-label="list navigation" class="side-navigation">
+ <ul>
   <li><a href="javascript:;" class="landing active">Landing page</a></li>
   <li><a href="javascript:;">Page 1</a></li>
   <li><a href="javascript:;">Page 2</a></li>
