--- a/src/_includes/modules/side-navigation-level3.html
+++ b/src/_includes/modules/side-navigation-level3.html
@@ -1,5 +1,5 @@
-<nav aria-label="list navigation">
- <ul class="list-navigation">
+<nav aria-label="list navigation" class="side-navigation">
+ <ul>
   <li><a href="javascript:;" class="landing back">Page 4 section landing</a></li>
   <li><a href="javascript:;" class="active">Page A</a></li>
   <li><a href="javascript:;">Page B section landing</a></li>
