--- a/src/_includes/modules/tabs.html
+++ b/src/_includes/modules/tabs.html
@@ -1,32 +1,18 @@
 <div class="tabs">
  <ul>
   <li>
-   <a href="#section1">Tab 1</a>
+   <a href="#section1">Tab 1 example</a>
   </li>
   <li>
-   <a href="#section2">Tab 2</a>
-  </li>
-  <li>
-   <a href="#section3">Tab 3</a>
-  </li>
-  <li>
-   <a href="#section4">Tab 4</a>
+   <a href="#section2">Tab 2 example</a>
   </li>
  </ul>
  <section id="section1">
-  <h3 class="m-t-0">Tab 1 headline</h3>
-  <p>This is tab 1 body text.</p>
+  <h3 class="m-t-0">Heading example</h3>
+  <p>Use tabs sparingly. When using tabs, don't use too many.</p>
  </section>
  <section id="section2">
-  <h3 class="m-t-0">Tab 2 headline</h3>
+  <h3 class="m-t-0">Tab 2 heading</h3>
   <p>This is tab 2 body text.</p>
- </section>
- <section id="section3">
-  <h3 class="m-t-0">Tab 3 headline</h3>
-  <p>This is tab 3 body text.</p>
- </section>
- <section id="section4">
-  <h3 class="m-t-0">Tab 4 headline</h3>
-  <p>This is tab 3 body text.</p>
  </section>
 </div>
