--- a/src/scss/colortheme/cs-page-navigation.scss
+++ b/src/scss/colortheme/cs-page-navigation.scss
@@ -3,7 +3,7 @@
    /source/scss/colortheme/cs-page-navigation.scss
 ----------------------------------------- */
 
-.list-navigation {
+.side-navigation ul, .list-navigation {
  li {
   a {
    color: $gray-700;
