--- a/src/_includes/modules/breadcrumb.html
+++ b/src/_includes/modules/breadcrumb.html
@@ -1,5 +1,5 @@
-<nav aria-label="Breadcrumb">
- <ol class="breadcrumb">
+<nav aria-label="Breadcrumb" class="breadcrumbs">
+ <ol>
   <li><a href="javascript:;" title="Home page">Breadcrumb 1</a></li>
   <li><a href="javascript:;" title="Examples landing page">Breadcrumb 2</a></li>
   <li class="active">Breadcrumb 3</li>
