Updated side navigation pages #855

--- a/src/_includes/layouts/sample-site.njk
+++ b/src/_includes/layouts/sample-site.njk
@@ -49,7 +49,7 @@
     {% include "../mobile-controls.njk" %}
     <div class="navigation-search full-width-nav container">
       <div id="head-search" class="search-container featured-search">
-          {% include "../search.njk" %}
+          {% include "../modules/search-disabled.njk" %}
       </div>
       <!-- navigation types -->
             {% if navigation %}
