--- a/src/_includes/modules/side-header-sample-site.njk
+++ b/src/_includes/modules/side-header-sample-site.njk
@@ -2,9 +2,9 @@
 <div class="section-default">
  <div class="branding">
   <div class="header-organization-banner">
-   <a href="/">
+   <a href="/components/side-navigation-sample.html">
     <div class="logo-assets">
-     <img src="/images/icons/balloons.svg" class="logo-img" alt="State Template Logo" />
+     <img src="/images/icons/balloons.svg" class="logo-img" alt="Sample site Logo" />
      <div class="logo-text">
       <span class="logo-state">State of California</span>
       <span class="logo-dept">Parties</span>
