switched from aria-hidden to aria-disabled

--- a/src/_includes/modules/navigation-sample-site.njk
+++ b/src/_includes/modules/navigation-sample-site.njk
@@ -2,19 +2,19 @@
 <nav id="navigation" class="main-navigation singlelevel auto-highlight">
  <ul id="nav_list" class="top-level-nav">
   <li class="nav-item" role="presentation">
-   <a href="javascript:;" class="first-level-link">Get Started</a>
+   <a href="javascript:;" class="first-level-link" aria-disabled ="true">Get Started</a>
   </li>
     <li class="nav-item" role="presentation">
    <a href="/components/side-navigation-sample.html" class="first-level-link active">Types of parties</a>
   </li>
   <li class="nav-item" role="presentation">
-   <a href="javascript:;" class="first-level-link">Event templates</a>
+   <a href="javascript:;" class="first-level-link" aria-disabled ="true">Event templates</a>
   </li>
   <li class="nav-item" role="presentation">
-   <a href="javascript:;" class="first-level-link">Supplies</a>
+   <a href="javascript:;" class="first-level-link" aria-disabled ="true">Supplies</a>
   </li>
   <li class="nav-item" role="presentation">
-   <a href="javascript:;"  class="first-level-link">Vendors</a>
+   <a href="javascript:;"  class="first-level-link" aria-disabled ="true">Vendors</a>
   </li>
  </ul>
 </nav>
