--- a/src/_includes/modules/search-disabled.njk
+++ b/src/_includes/modules/search-disabled.njk
@@ -1,10 +1,10 @@
 <div class="container">
-    <form id="Search" class="pos-rel" disabled aria-hidden="true">
+    <form id="Search" class="pos-rel" disabled aria-disabled ="true">
         <span class="sr-only" id="SearchInput">Custom Google Search</span>
         <input type="text" name="q" aria-labelledby="SearchInput" placeholder="Search"
             class="search-textfield" disabled />
         <button type="submit" class="gsc-search-button" disabled><span
-                class="ca-gov-icon-search" aria-hidden="true"></span><span
+                class="ca-gov-icon-search" aria-disabled ="true"></span><span
                 class="sr-only">Submit</span></button>
         <div class="close-search-btn"><button
                 class="close-search gsc-clear-button border-0 bg-transparent pos-rel"
