added executive profile component #477

--- a/src/scss/colortheme/mono-import.scss
+++ b/src/scss/colortheme/mono-import.scss
@@ -38,6 +38,7 @@
 @import "cs-alert.scss";
 @import "cs-link-grid.scss";
 @import "cs-blockquote.scss";
+@import "cs-executive-profile.scss";
 @import "cs-utility.scss";
 
 @import "cs-high-contrast.scss"; // File should always be last
