updated progress tracker #1072

--- a/src/_includes/modules/progress-block.html
+++ b/src/_includes/modules/progress-block.html
@@ -1,51 +1,52 @@
 <!-- Static Process -->
 <div class="row">
-    <div class="col-sm-3 m-b-60">
-        <!-- Static Process -->
-        <div class="text-center">
-            <i class="dot-line brd-transparent-before brd-gray-light-after m-b-md">
-                <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
-            </i>
-            <h3 class="h5 m-b">Brainstorming</h3>
-            <p class="m-b-0">This is where we sit down, grab a cup of coffee and do some brainstorming.</p>
-        </div>
-        <!-- End Static Process -->
-    </div>
+ <div class="col-sm-3 text-sm-center d-flex d-sm-block">
+  <!-- Static Process -->
 
-    <div class="col-sm-3 m-b-60">
-        <!-- Static Process -->
-        <div class="text-center">
-            <i class="dot-line brd-gray-light-before brd-gray-light-after m-b-md">
-                <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
-            </i>
-            <h3 class="h5 m-b">Research</h3>
-            <p class="m-b-0">Now that we've have some ideas, it's time to research.</p>
-        </div>
-        <!-- End Static Process -->
-    </div>
+  <div class="dot-line brd-transparent-before brd-gray-light-after">
+   <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
+  </div>
+  <div class="dot-text">
+   <h3 class="h5 m-b">Step 1</h3>
+   <p class="mb-4">Briefly discuss the step or identify the milestone.</p>
+  </div>
+  <!-- End Static Process -->
+ </div>
 
-    <div class="col-sm-3 m-b-60">
-        <!-- Static Process -->
-        <div class="text-center">
-            <i class="dot-line brd-gray-light-before brd-gray-light-after m-b-md">
-                <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
-            </i>
-            <h3 class="h5 m-b">Design</h3>
-            <p class="m-b-0">We begin to visualize concepts and dive into details.</p>
-        </div>
-        <!-- End Static Process -->
-    </div>
+ <div class="col-sm-3 text-sm-center d-flex d-sm-block">
+  <!-- Static Process -->
+  <div class="dot-line brd-gray-light-before brd-gray-light-after">
+   <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
+  </div>
+  <div class="dot-text">
+   <h3 class="h5 m-b">Step 2</h3>
+   <p class="mb-4">Keep the message clear and concise.</p>
+  </div>
+  <!-- End Static Process -->
+ </div>
 
-    <div class="col-sm-3 m-b-60">
-        <!-- Static Process -->
-        <div class="text-center">
-            <i class="dot-line brd-gray-light-before brd-transparent-after m-b-md">
-                <span class="dot-line-inner bg-white brd-gray-light"></span>
-            </i>
-            <h3 class="h5 m-b">Release</h3>
-            <p class="m-b-0">Your product is all dressed up and ready to go, it's time to release.</p>
-        </div>
-        <!-- End Static Process -->
-    </div>
+ <div class="col-sm-3 text-sm-center d-flex d-sm-block">
+  <!-- Static Process -->
+  <div class="dot-line brd-gray-light-before brd-gray-light-after">
+   <span class="dot-line-inner bg-white bg-primary-before brd-gray-light"></span>
+  </div>
+  <div class="dot-text">
+   <h3 class="h5 m-b">Step 3</h3>
+   <p class="mb-4">Do not link to more information from the tracker.</p>
+  </div>
+  <!-- End Static Process -->
+ </div>
+
+ <div class="col-sm-3 text-sm-center d-flex d-sm-block">
+  <!-- Static Process -->
+  <div class="dot-line brd-gray-light-before brd-transparent-after">
+   <span class="dot-line-inner bg-white brd-gray-light"></span>
+  </div>
+  <div class="dot-text">
+   <h3 class="h5 m-b">Step 4</h3>
+   <p class="mb-4">Instead, link to additional information in your body content or tracker caption</p>
+  </div>
+  <!-- End Static Process -->
+ </div>
 </div>
 <!-- End Static Process -->
