--- a/src/scss/cagov/navigation.scss
+++ b/src/scss/cagov/navigation.scss
@@ -210,8 +210,9 @@
     // 992px
     @media (min-width: $screen-md-min) {
      /* Navigation icons */
-     display: block;
-     font-size: 32px;
+     display:inline;
+     font-size: inherit;
+     color: inherit;
     }
    }
    // 991px
