--- a/src/scss/cagov/global-header.scss
+++ b/src/scss/cagov/global-header.scss
@@ -43,12 +43,18 @@
  width: auto;
  .section-default {
   background-color: $white;
+  @media (min-width: $screen-md-min) {
+   border-bottom: 1px solid $gray-200;
+  }
   &:after {
    content: "";
    border-bottom: 1px solid $gray-200;
    position: absolute;
    width: 100%;
    left: 0;
+   @media (min-width: $screen-md-min) {
+    border-bottom: none;
+   }
   }
  }
  @media (min-width: $screen-md-min) {
