updated download and setup page #840

--- a/src/scss/cagov/type.scss
+++ b/src/scss/cagov/type.scss
@@ -506,6 +506,10 @@ a.list-group-item {
 }
 }
 
+.icon-abs-right .external-link-icon {
+ position: absolute;
+ right: 1.5rem;
+}
 
 /* external link exeptions */
 .cagov-card,
