added newsroom page  #1251

--- a/src/_includes/modules/news-list.html
+++ b/src/_includes/modules/news-list.html
@@ -1,26 +1,16 @@
-<section class="news-list">
-    <!-- Begin repeatable news item -->
-    <article class="news-item">
-        <div class="thumbnail"><img src="/images/sample/images/150x100.gif" alt="sample image"></div>
-        <div class="info">
-            <div class="headline"><a href="">Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</a></div>
-            <div class="description">
-                <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
-            </div>
-            <div class="published">Published: <time datetime="2014-10-20">Oct 20, 2014</time></div>
-        </div>
-    </article>
-    <!-- End news item -->
-    <!-- Begin repeatable news item -->
-    <article class="news-item">
-        <div class="thumbnail"><img src="/images/sample/images/150x100.gif" alt="sample image"></div>
-        <div class="info">
-            <div class="headline"><a href="">Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</a></div>
-            <div class="description">
-                <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
-            </div>
-            <div class="published">Published: <time datetime="2014-10-20">Oct 20, 2014</time></div>
-        </div>
-    </article>
-    <!-- End news item -->
-</section>
+<!-- News list  -->
+<h2 class="h3">Latest news</h2>
+<hr class="m-y-md">
+<h3 class="lead font-weight-700"><a href="javascript:;" aria-disabled="true">Local Entity Implements Changes to
+  Operations</a></h3>
+<p>Month 00, 0000 | News</p>
+<hr class="m-y-md">
+<h3 class="lead font-weight-700"><a href="javascript:;" aria-disabled="true">Discussion Continues Regarding
+  California’s Project Funding </a></h3>
+<p>Month 00, 0000 | News</p>
+<hr class="m-y-md">
+<h3 class="lead font-weight-700"><a href="javascript:;" aria-disabled="true">Significant Agreement Reached in San
+  Francisco </a></h3>
+<p>Month 00, 0000 | News</p>
+<hr class="m-y-md">
+<!-- End News list  -->
