Added news article pattern #476

--- a/src/_includes/modules/news-article.html
+++ b/src/_includes/modules/news-article.html
@@ -1,21 +1,51 @@
-<article class="news-detail">
-    <header>
-        <h2 class="h1">News Title</h2>
-        <div class="published">Published: <time datetime="2014-08-26">Aug 26, 2014</time></div>
-    </header>
+<!--News Article-->
+<p class="m-t-md">Month 00, 0000 | Press release</p>
+<h1>Article Title</h1>
+<p class="lead">Support the title with some short explanatory text. You don’t need more than a couple sentences.</p>
+<p>By Author Name</p>
 
-    <p><img src="/images/sample/images/75x75.gif" class="img-left" alt="">Full Article Text - Cras justo odio, dapibus
-        ac facilisis in, egestas eget quam. Curabitur blandit tempus porttitor. Vestibulum id ligula porta felis euismod
-        semper. Donec sed odio dui. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.
-        Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+<div class="socialsharer-container m-y-lg float-none">
+ <a class="ca-gov-icon-share-facebook gray-700 gray-900-hover m-r" title="Facebook Link" href="javascript:;"
+  aria-disabled="true"></a>
+ <a class="ca-gov-icon-twitter gray-700 gray-900-hover m-r" title="Twitter Link" href="javascript:;"
+  aria-disabled="true"></a>
+ <a class="ca-gov-icon-email gray-700 gray-900-hover m-r" title="Email Link" href="javascript:;"
+  aria-disabled="true"></a>
+ <a class="ca-gov-icon-link gray-700 gray-900-hover m-r" title="Email Link" href="javascript:;"
+  aria-disabled="true"></a>
+</div>
 
-    <footer class="keywords">
-        Tags or Keywords
-        <ul>
-            <li><a href="">tag 1</a></li>
-            <li><a href="">tag 2</a></li>
-            <li><a href="">tag 3</a></li>
-            <li><a href="">tag 4</a></li>
-        </ul>
-    </footer>
-</article>
+<hr class="m-b-lg">
+
+<p><span class="bold">City Name, California</span> – This is your lead paragraph. It is the most important paragraph
+ in your news article. Put
+ all important information here in a concise. clear, and interesting way. It should include what happened, where, and
+ when. When possible, also include who was involved and why. Other paragraphs can provide more detail and contain less
+ important information. </p>
+<p>The remaining paragraphs are supporting paragraphs. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+ Vestibulum pretium dapibus diam, a finibus metus congue a. Vestibulum laoreet faucibus ultrices. Vestibulum
+ condimentum lectus in arcu ultricies condimentum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum
+ pretium dapibus diam, a finibus metus congue a. Vestibulum laoreet faucibus ultrices. Vestibulum condimentum lectus
+ in arcu ultricies condimentum.
+</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pretium dapibus diam, a finibus metus congue a.
+ Vestibulum laoreet faucibus ultrices. Vestibulum condimentum lectus in arcu ultricies condimentum. Lorem ipsum dolor
+ sit amet, consectetur adipiscing elit. Vestibulum pretium dapibus diam, a finibus metus congue a. Vestibulum laoreet
+ faucibus ultrices. Vestibulum condimentum lectus in arcu ultricies condimentum. </p>
+
+<h2>Article subtitle</h2>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pretium dapibus diam, a finibus metus congue a.
+ Vestibulum laoreet faucibus ultrices. Vestibulum condimentum lectus in arcu ultricies condimentum. Lorem ipsum dolor
+ sit amet, consectetur adipiscing elit. Vestibulum pretium dapibus diam, a finibus metus congue a. Vestibulum laoreet
+ faucibus ultrices. Vestibulum condimentum lectus in arcu ultricies condimentum. </p>
+
+<hr class="m-t-lg d-block">
+
+<h3 class="h4">Press contact</h3>
+
+
+<p class="bold">Communications Office</p>
+<p><a href="javascript:;" aria-disabled="true">comms@department.ca.gov</a></p>
+<p> (916) 000-0000</p>
+<!--End News Article-->
