--- a/src/scss/cagov/navigation.scss
+++ b/src/scss/cagov/navigation.scss
@@ -160,6 +160,7 @@
    font-weight: 400;
    // white-space: nowrap;
    position: relative;
+   text-align: left;
    z-index: 1;
    height: 100%;
    &:hover,
