--- a/src/_includes/modules/step-list.html
+++ b/src/_includes/modules/step-list.html
@@ -1,23 +1,23 @@
 <ol class="cagov-step-list">
-  <li>
-    Give your steps a clear, concise title
-    <br/>
-    <span class="cagov-step-list-content">
-   The step list is a good fit for lengthy content. Use this space to discuss the step or identify the milestone. If there is information that your visitor must know before completing this step, you can talk about that here too.
+ <li>
+  Step one of your list
+  <br />
+  <span class="cagov-step-list-content">
+   Riveting text to explain the step.
   </span>
-  </li>
-  <li>
-    Make your steps actionable
-    <br/>
-    <span class="cagov-step-list-content">
-   Be sure to tell your visitor exactly what they have to do to complete the step. If the process is not fully fleshed out, then this component may not be the best fit for your content.
+ </li>
+ <li>
+  Step two of your list
+  <br />
+  <span class="cagov-step-list-content">
+   Everyone is going to love the simple, visual way you laid out these steps.
   </span>
-  </li>
-  <li>
-    Conclude the process
-    <br/>
-    <span class="cagov-step-list-content">
-   All good things must come to an end. Tell your reader how to complete their task. If needed, you can link to additional information in the step list content.
+ </li>
+ <li>
+  Step three of your list
+  <br />
+  <span class="cagov-step-list-content">
+   This process has never seemed easier.
   </span>
-  </li>
+ </li>
 </ol>
