--- a/src/_includes/modules/timeline.html
+++ b/src/_includes/modules/timeline.html
@@ -8,7 +8,7 @@
      <!-- Timeline Date -->
      <div class="col-md-3 text-md-end p-x-md">
       <div class="h5 m-b-0 m-t">Step 1 Contributor</div>
-      <div class="h6 m-y-0">Month and year</div>
+      <div class="h6 m-y-0">YY - YY</div>
      </div>
      <!-- End Timeline Date -->
      <!-- Timeline Content -->
@@ -29,7 +29,7 @@
      <!-- Timeline Date -->
      <div class="col-md-3  text-md-end p-x-md">
       <div class="h5 m-b-0 m-t">Step 2 Contributor</div>
-      <div class="h6 m-y-0">Month and year</div>
+      <div class="h6 m-y-0">YY - YY</div>
      </div>
      <!-- End Timeline Date -->
      <!-- Timeline Content -->
@@ -51,7 +51,7 @@
      <!-- Timeline Date -->
      <div class="col-md-3 text-md-end p-x-md">
       <div class="h5 m-b-0 m-t">Step 3 Contributor</div>
-      <div class="h6 m-y-0">Month and year</div>
+      <div class="h6 m-y-0">YY - YY</div>
      </div>
      <!-- End Timeline Date -->
      <!-- Timeline Content -->
@@ -71,7 +71,7 @@
      <!-- Timeline Date -->
      <div class="col-md-3 text-md-end p-x-md">
       <div class="h5 m-b-0 m-t">Step 4 Contributor</div>
-      <div class="h6 m-y-0">Month and year</div>
+      <div class="h6 m-y-0">YY - YY</div>
      </div>
      <!-- End Timeline Date -->
      <!-- Timeline Content -->
