--- a/src/scss/cagov/step-list.scss
+++ b/src/scss/cagov/step-list.scss
@@ -21,16 +21,18 @@
   content: "";
   font-size: 1.625rem;
   font-weight: 700;
-  padding: 0 13px 0 13px;
+  padding: 0 12px 0 12px;
   border: 5px solid;
   background-color: #fff;
   border-radius: 50%;
   text-align: center;
   position: absolute;
   left: -27px;
-  top: -5px;
+  top: -3px;
   margin-left: -1px;
  }
+
+
  li span.has-black-color,
  li .cagov-step-list-content {
   margin-top: 1rem;
@@ -40,8 +42,10 @@
   display: block;
  }
  li:first-child:before {
-  padding: 0 13px 0 13px;
+  padding: 0 14px 0 14px;
+  margin-left: -1px;
  }
+
  li::before {
   counter-increment: step-list-count;
   content: counter(step-list-count);
@@ -52,11 +56,30 @@
  li:nth-child(n + 20):before {
   padding: 0 5px;
  }
+ 
  li:last-child {
   border-left: none;
  }
+ // exeptions
+ li:nth-child(3):before {
+  margin-left: -1px;
+ }
+ li:nth-child(10):before {
+  margin-left: -1px;
+ }
+ li:nth-child(11):before {
+  padding: 0 10px 0 10px;
+ }
+ li:nth-child(12):before {
+  padding: 0 8px 0 8px;
+  margin-left: -1px;
+ }
+ li:nth-child(21):before {
+  padding: 0 6px 0 6px;
+ }
+ //
  li:last-child:before {
-  margin-left: 6px;
+  margin-left: 3px;
  }
 }
 
