Fixed partner with us section #1287

--- a/src/_includes/modules/three-cards-blue.html
+++ b/src/_includes/modules/three-cards-blue.html
@@ -48,7 +48,7 @@
    </div>
   </div>
   <div class="row">
-   <div class="third m-b-md">
+   <div class="col-lg-4 m-b-md">
     <div class="d-flex">
      <div class="m-b-0">
       <img class="p-1" height="120px" src="/images/idea-icon.svg" alt="">
@@ -63,7 +63,7 @@
     </div>
    </div>
 
-   <div class="third m-b-md">
+   <div class="col-lg-4 m-b-md">
     <div class="d-flex">
      <div class="m-b-0">
       <img class="p-1" height="120px" src="/images/feedback-icon.svg" alt="">
@@ -77,7 +77,7 @@
     </div>
    </div>
 
-   <div class="third m-b-md">
+   <div class="col-lg-4 m-b-md">
     <div class="d-flex">
      <div class="m-b-0">
       <img class="p-1" height="120px" src="/images/support-icon.svg" alt="">
