Update link title to 'Page Link'

--- a/src/_includes/modules/news-article.html
+++ b/src/_includes/modules/news-article.html
@@ -11,7 +11,7 @@
   aria-disabled="true"></a>
  <a class="ca-gov-icon-email gray-700 gray-900-hover m-r" title="Email Link" href="javascript:;"
   aria-disabled="true"></a>
- <a class="ca-gov-icon-link gray-700 gray-900-hover m-r" title="Email Link" href="javascript:;"
+ <a class="ca-gov-icon-link gray-700 gray-900-hover m-r" title="Page Link" href="javascript:;"
   aria-disabled="true"></a>
 </div>
 
