Fixed main navigation carrot bug

--- a/src/scss/cagov/navigation.scss
+++ b/src/scss/cagov/navigation.scss
@@ -672,7 +672,8 @@
 
     &.has-sub {
      .carrot {
-      bottom: 0;
+      position: absolute;
+      right: 0.75rem;
       top: 0.35rem;
       transition: all 0.5s cubic-bezier(0.57, 0.2, 0.21, 0.89);
       //  transform: translateY(-50%);
@@ -682,7 +683,7 @@
     &[aria-expanded="true"] {
      .carrot {
       transform: rotate(180deg);
-      bottom: 0.35rem;
+      top: 0.6rem;
      }
     }
    }
