updated the footer links #1290

--- a/src/_includes/modules/site-footer.html
+++ b/src/_includes/modules/site-footer.html
@@ -17,16 +17,14 @@
    </div>
    <div class="col-md-4">
     <div class="h4 w-100 brd-bottom brd-highlight p-b" role="heading" aria-level="2">Resources</div>
-    <a href="https://designsystem.webstandards.ca.gov/style/content"
-     class="d-block no-underline m-y font-size-16">Content style
-     guide</a>
-    <a href="https://designsystem.webstandards.ca.gov/style/design" class="d-block no-underline m-y font-size-16">Design
-     style
-     guide</a>
-    <a href="https://designsystem.webstandards.ca.gov/why-web-components"
-     class="d-block no-underline m-y font-size-16">Why web
-     components</a>
+    <a href="https://designsystem.webstandards.ca.gov/principles/"
+     class="d-block no-underline m-y font-size-16">Principles</a>
+    <a href="https://designsystem.webstandards.ca.gov/style/content/"
+     class="d-block no-underline m-y font-size-16">Content style guide</a>
+    <a href="https://dor.ca.gov/Home/WebAccessibilityToolkit" class="d-block no-underline m-y font-size-16">Web
+     accessibility toolkit</a>
    </div>
   </div>
+ </div>
  </div>
 </aside>
