updated accordion side nav ID

--- a/src/_includes/modules/nav-side-accordion.html
+++ b/src/_includes/modules/nav-side-accordion.html
@@ -1,5 +1,5 @@
-<nav aria-labelledby="components-list">
- <div class="sr-only" id="components-list">Accordion side navigation</div>
+<nav aria-labelledby="accordion-side-nav">
+ <div class="sr-only" id="accordion-side-nav">Accordion side navigation</div>
  <a class="sidenav landing" href="javascript:;">Landing page</a>
 
  <cagov-accordion class="sidenav">
