--- a/src/_includes/layouts/components.njk
+++ b/src/_includes/layouts/components.njk
@@ -14,7 +14,7 @@
 
 
 <ul>
-  <li><a href="/components.html" class="nav-heading landing" id="components-list">All components</a></li>
+  <li><a href="/components.html" class="nav-heading landing" id="components-list">Components</a></li>
   				{% for item in components.components %}
       {% if 'subnav' in item %}
         <li><a href="{{ item.url }}" {{ helpers.getLinkActiveState(item.url, page.url) | safe }}>{{ item.text }}</a>
