--- a/src/_includes/modules/site-footer.html
+++ b/src/_includes/modules/site-footer.html
@@ -6,6 +6,7 @@
     <a href="/about.html" class="d-block no-underline m-y font-size-16">About</a>
     <a href="/contact-us.html" class="d-block no-underline m-y font-size-16">Contact us</a>
     <a href="https://airtable.com/shro9V6ry2Cf4mpgG" class="d-block no-underline m-y font-size-16">Give feedback</a>
+    <a href="/accessibility.html" class="d-block no-underline m-y font-size-16">Accessibility</a>
    </div>
    <div class="col-md-4">
     <div class="h4 w-100 brd-bottom  brd-highlight p-b" role="heading" aria-level="2">Related websites</div>
