--- a/src/_includes/layouts/search.njk
+++ b/src/_includes/layouts/search.njk
@@ -101,19 +101,8 @@
         var s = document.getElementsByTagName('script');
         s[s.length - 1].parentNode.insertBefore(gcse, s[s.length - 1]);
 
-
-
         // extracting search query from the url parameter and applying it to the searchbox
-        function getUrlVars() {
-            var vars = {};
-            var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function (m, key, value) {
-                vars[key] = value;
-            });
-            return vars;
-        }
-        var query = getUrlVars()["q"];
-        document.querySelector('input[name=q]').value = query;
-
+        document.querySelector('input[name=q]').value = new URLSearchParams(window.location.search).get("q");
     </script>
 </body>
 </html>
