iPhone search fix attemt

--- a/src/scss/cagov/search.scss
+++ b/src/scss/cagov/search.scss
@@ -173,7 +173,9 @@ $search-input-border-width: 3px;
 
 .search-textfield {
  padding-left: 10px; // Applying padding to all the search inputs globally. TODO: Check regression
--webkit-appearance: none;
+ -webkit-appearance: none;
+ -webkit-border-radius:0; 
+ border-radius:0;
 }
 
 .search-container.active {
