added white background to search box

--- a/src/scss/cagov/search.scss
+++ b/src/scss/cagov/search.scss
@@ -173,6 +173,7 @@ $search-input-border-width: 3px;
 
 .search-textfield {
  padding-left: 10px; // Applying padding to all the search inputs globally. TODO: Check regression
+ background: $white;
 -webkit-appearance: none;
 }
 
