isolating issue and using canvas color for iPhone

--- a/src/scss/cagov/search.scss
+++ b/src/scss/cagov/search.scss
@@ -171,11 +171,10 @@ $search-input-border-width: 3px;
  }
 }
 
-.search-textfield {
+input[type="search"].search-textfield {
  padding-left: 10px; // Applying padding to all the search inputs globally. TODO: Check regression
  -webkit-appearance: none;
- -webkit-border-radius:0; 
- border-radius:0;
+ background-color: canvas;
 }
 
 .search-container.active {
