Using type=Search

--- a/src/_includes/modules/search-disabled.njk
+++ b/src/_includes/modules/search-disabled.njk
@@ -1,7 +1,7 @@
 <div class="container">
     <form id="Search" class="pos-rel" disabled aria-disabled ="true">
         <span class="sr-only" id="SearchInput">Custom Google Search</span>
-        <input type="text" name="q" aria-labelledby="SearchInput" placeholder="Search"
+        <input type="search" name="q" aria-labelledby="SearchInput" placeholder="Search"
             class="search-textfield" disabled />
         <button type="submit" class="gsc-search-button" disabled><span
                 class="ca-gov-icon-search" aria-disabled ="true"></span><span
