--- a/src/_includes/search.njk
+++ b/src/_includes/search.njk
@@ -1,7 +1,7 @@
 <div class="container">
     <form id="Search" class="pos-rel" action="/serp.html">
         <span class="sr-only" id="SearchInput">Custom Google Search</span>
-        <input type="text" name="q" aria-labelledby="SearchInput" placeholder="Search"
+        <input type="search" name="q" aria-labelledby="SearchInput" placeholder="Search"
             class="search-textfield" />
         <button type="submit" class="gsc-search-button"><span
                 class="ca-gov-icon-search" aria-hidden="true"></span><span
